# aix

./: CMakeLists.txt
.github/workflows/: ci.yml  gemini-review.yml
src/: app_engine.cpp  main.cpp  test.cpp
src/cli/: arg_parser.cpp  arg_parser.hpp  formatter.cpp  formatter.hpp
src/core/: config_manager.cpp  config_manager.hpp
src/network/: api_handler.cpp  api_handler.hpp  http_client.cpp  http_client.hpp
src/utils/: file_system.cpp  file_system.hpp
tests/: CMakeLists.txt  test_api_handler.cpp  test_cli.cpp  test_formatter.cpp  test_network.cpp  test_utils.cpp
